tests/NormalTests/paczka1/fuzzy1/74919710.err
Error in line 4: OUh A500 -4,2
Error in line 3: OUh A500 75,2
Error in line 8: Si5LPeI A119 0,2
